[gd_scene load_steps=13 format=3 uid="uid://dk0xnahrcm0ca"]

[ext_resource type="Script" path="res://scenes/laser/laser.gd" id="1_euay5"]
[ext_resource type="Texture2D" uid="uid://yghe30ruji4t" path="res://assets/enemy/laserRed01.png" id="1_rwovp"]
[ext_resource type="Texture2D" uid="uid://b6hid8ygbg7m4" path="res://assets/enemy/bird_deadz-Sheet.png" id="3_m31ns"]
[ext_resource type="AudioStream" uid="uid://cnj8d28kgstnx" path="res://assets/sounds/laserfire01.ogg" id="4_ke2cx"]
[ext_resource type="AudioStream" uid="uid://x48g0an2iguh" path="res://assets/sounds/NenadSimic - Muffled Distant Explosion.wav" id="5_de6dt"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_yyql6"]
radius = 3.0
height = 38.0

[sub_resource type="AtlasTexture" id="AtlasTexture_w8t6h"]
atlas = ExtResource("3_m31ns")
region = Rect2(0, 0, 33, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_q15nv"]
atlas = ExtResource("3_m31ns")
region = Rect2(33, 0, 33, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_v6xmi"]
atlas = ExtResource("3_m31ns")
region = Rect2(66, 0, 33, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_txxf4"]
atlas = ExtResource("3_m31ns")
region = Rect2(99, 0, 33, 33)

[sub_resource type="AtlasTexture" id="AtlasTexture_7nvdt"]
atlas = ExtResource("3_m31ns")
region = Rect2(132, 0, 33, 33)

[sub_resource type="SpriteFrames" id="SpriteFrames_7ir4v"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w8t6h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q15nv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v6xmi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_txxf4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7nvdt")
}],
"loop": false,
"name": &"default",
"speed": 15.0
}]

[node name="Laser" type="Area2D"]
script = ExtResource("1_euay5")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_rwovp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_yyql6")

[node name="PointLight2D" type="PointLight2D" parent="."]
texture = ExtResource("1_rwovp")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(4.76837e-07, 0.5)
scale = Vector2(0.6, 2.25)

[node name="ExplosionAnimation" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(0, -16)
sprite_frames = SubResource("SpriteFrames_7ir4v")
frame = 4
frame_progress = 1.0

[node name="shotSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_ke2cx")

[node name="boomSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_de6dt")
volume_db = 5.0

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_screen_exited"]
[connection signal="animation_finished" from="ExplosionAnimation" to="." method="_on_explosion_animation_animation_finished"]
